# ksitest

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: config_catboost.yaml  config_xgboost.yaml
data/processed/: STR_test_imputed.csv
docs/: README.md
ksitest/: impute_str.py  optuna_hyperparameter_optimization.py  train_model.py
ksitest/prepare/: preprocess.py
models/catboost/: Allele1_BM1818_CatBoost_winsorization.cbm  Allele1_BM1824_CatBoost_winsorization.cbm  Allele1_BM2113_CatBoost_winsorization.cbm  Allele1_ETH10_CatBoost_winsorization.cbm  Allele1_ETH225_CatBoost_winsorization.cbm  Allele1_ETH3_CatBoost_winsorization.cbm  Allele1_INRA023_CatBoost_winsorization.cbm  Allele1_SPS115_CatBoost_winsorization.cbm  Allele1_TGLA122_CatBoost_winsorization.cbm  Allele1_TGLA126_CatBoost_winsorization.cbm  Allele1_TGLA227_CatBoost_winsorization.cbm  Allele1_TGLA53_CatBoost_winsorization.cbm  Allele2_BM1818_CatBoost_winsorization.cbm  Allele2_BM1824_CatBoost_winsorization.cbm  Allele2_BM2113_CatBoost_winsorization.cbm  Allele2_ETH10_CatBoost_winsorization.cbm  Allele2_ETH225_CatBoost_winsorization.cbm  Allele2_ETH3_CatBoost_winsorization.cbm  Allele2_INRA023_CatBoost_winsorization.cbm  Allele2_SPS115_CatBoost_winsorization.cbm  Allele2_TGLA122_CatBoost_winsorization.cbm  (+3 more)
notebooks/: impute.ipynb
results/: optuna_results_catboost.txt  results_CatBoost_winsorization.txt  results_XGBoost_none.txt
(+34 files in other folders)
