[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ksitest"
version = "0.0.1"
description = "The goal is to impute STR (Short Tandem Repeats) data from SNP (Single Nucleotide Polymorphisms) data for Holstein cows, which is critical in verifying the genetic relationship between animals for livestock selection."
authors = [
  { name = "Nikolenko_Sergei" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",

]
requires-python = "~=3.10"


[tool.ruff.lint.isort]
known_first_party = ["ksitest"]
force_sort_within_sections = true


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
